# ImageGenContract

./: README.md  pyproject.toml  run_tests.sh
image_gen_contract/: __init__.py  messages.py  schemas.py
image_gen_contract/schemas/: completion.json  job.json
tarostory_contract/: __init__.py  schemas.py
tarostory_contract/schemas/: job.json
tests/: conftest.py  test_jsonschema_alignment.py  test_messages.py
