[project]
name = "image-gen-contract"
version = "0.1.0"
description = "Wire-format contract (JSON Schema + Pydantic) between the Tarostory API server and the image-gen worker."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "jsonschema>=4.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["image_gen_contract*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
image_gen_contract = ["schemas/*.json"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["image_gen_contract"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
fail_under = 100
show_missing = true
skip_covered = false
